# hvx

./: .env.example  .gitignore  .pypirc.template  BRICK_SCHEMA_INTEGRATION.md  INSTALL.md  INSTRUCTIONS.md  LICENSE  MANIFEST.in  README.md  __init__.py  climate_indoor_merge.py  demo.py  example.py  generate_smart_recommendations.py  install.bat  install.sh  main.py  mapping.py  pyproject.toml  requirements.txt  run_htk_report.sh  setup.py  setup_cli.py  template-instructions.md  test_aggregation_debug.py  test_brick_integration.py  test_brick_model.ttl  test_data_loader.py  test_standards.py  test_template_improvements.py  uninstall.sh
app/: __init__.py  (+3 more)
clean/: .gitignore  ADVANCED_ANALYTICS.md  MIGRATION_SUMMARY.md  README.md  mypy.ini  pyproject.toml  requirements.txt  test_new_features.py
clean/config/charts/: bar_chart_style.yaml
clean/config/filters/: afternoon_no_holidays.yaml  all_hours.yaml  morning_no_holidays.yaml  non_opening_hours.yaml  opening_hours.yaml
clean/config/holidays/: denmark.yaml
clean/config/periods/: autumn.yaml  heating_season.yaml  non_heating_season.yaml  winter.yaml
clean/config/report_templates/: comprehensive_building_report.yaml  problematic_rooms_report.yaml  top_bottom_performers_report.yaml
clean/config/standards/: README.md
clean/config/standards/danish-guidelines/: co2_danish_guidelines.yaml
clean/config/standards/en16798-1/: README.md  cat_i_co2.yaml  cat_i_humidity.yaml  cat_i_temp_heating_season.yaml  cat_i_temp_non_heating_season.yaml  cat_ii_co2.yaml  cat_ii_humidity.yaml  cat_ii_temp_heating_season.yaml  cat_ii_temp_non_heating_season.yaml  cat_iii_co2.yaml  cat_iii_humidity.yaml  cat_iii_temp_heating_season.yaml  cat_iii_temp_non_heating_season.yaml
clean/config/standards/tail/: tail_schema.yaml
clean/core/: __init__.py
clean/core/analytics/: __init__.py
clean/core/analytics/aggregators/: building_aggregator.py  en16798_aggregator.py  portfolio_aggregator.py
clean/core/analytics/correlations/: __init__.py  climate_correlator.py  weather_analyzer.py
clean/core/analytics/engine/: __init__.py  analysis_engine.py
clean/core/analytics/evaluators/: __init__.py  base_evaluator.py  threshold_evaluator.py
clean/core/analytics/filters/: __init__.py  opening_hours_filter.py  seasonal_filter.py  time_filter.py
clean/core/analytics/metrics/: __init__.py  compliance_metrics.py  data_quality_metrics.py  statistical_metrics.py
clean/core/analytics/recommendations/: __init__.py  insulation_analyzer.py  recommendation_engine.py  solar_shading_analyzer.py  ventilation_optimizer.py
clean/core/analytics/special/: __init__.py  occupancy_detector.py  ventilation_rate_predictor.py
clean/core/application/services/: polygon_drawer.py
clean/core/application/use_cases/: __init__.py  export_results.py  generate_report.py  generate_tail_chart.py  load_analysis.py  load_data.py  run_analysis.py  save_analysis.py
clean/core/cli/: README.md  main.py
clean/core/cli/commands/: analyze.py  data.py  report.py  tail.py
clean/core/domain/: __init__.py
clean/core/domain/enums/: __init__.py  building_type.py  measurement_type.py  parameter_type.py  priority.py  room_type.py  standard_type.py  tail_category.py  tail_config.py
clean/core/domain/models/: __init__.py  building.py  building_analysis.py  compliance_result.py  dataset.py  level.py  portfolio_analysis.py  room.py  room_analysis.py  violation.py
clean/core/domain/value_objects/: __init__.py  compliance_threshold.py  measurement.py  recommendation.py
clean/core/infrastructure/data_loaders/: __init__.py  csv_loader.py  dataset_builder.py  excel_loader.py
clean/core/reporting/: __init__.py  chart_config.py  chart_helper.py  report_generator.py
clean/core/reporting/charts/: __init__.py  bar_chart.py  compliance_chart.py  heatmap_chart.py  matplotlib_bar_chart.py  matplotlib_compliance_chart.py  matplotlib_heatmap.py  matplotlib_line_chart.py  tail_circular_chart.py  timeseries_chart.py
clean/core/reporting/renderers/: html_renderer.py
clean/core/reporting/template_engine/: __init__.py  report_template.py  template_loader.py  template_validator.py
clean/docs/: ARCHITECTURE.md  CHARTS_MIGRATION_SUMMARY.md  CLI_COMMAND_REFERENCE.md  CLI_IMPLEMENTATION_PLAN.md  CLI_IMPLEMENTATION_SUMMARY.md  CLI_INTEGRATION_COMPLETE.md  EN16798_COMPLIANCE_FIX.md  EN16798_INTEGRATION_COMPLETE.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_STATUS.md  REPORT_GENERATION.md  REPORT_SYSTEM_SUMMARY.md  REPORT_TEST_SUMMARY.md  TAIL_CONFIG_COMPLETION_REPORT.md  TAIL_ENHANCEMENTS.md  TAIL_RATING_INTEGRATION.md
clean/examples/: demo_climate_correlations.py  demo_smart_recommendations.py  demo_tail_building_dependency.py
clean/tests/e2e/: analyze_test_rooms.py  debug_single_room.py  run_test_reports.sh  test_en16798_category_ranking.py  test_tail_config_merge.py
(+720 files in other folders)
