[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hvx"
version = "0.1.0"
description = "HVAC Analytics eXpert - Indoor Environmental Quality analysis CLI"
readme = "README.md"
authors = [
    {name = "Bruno Adam", email = "bruno.adam@pm.me"}
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
keywords = ["hvac", "analytics", "ieq", "indoor-air-quality", "climate", "data-analysis"]
requires-python = ">=3.9"
dependencies = [
    "click>=8.0.0",
    "rich>=13.0.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "pyyaml>=6.0",
    "reportlab>=4.0.0",
    "holidays>=0.35",
    "python-dateutil>=2.8.0",
    "jinja2>=3.0.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "isort>=5.12.0",
]

[project.urls]
Homepage = "https://github.com/bruadam/hvx"
Documentation = "https://github.com/bruadam/hvx/blob/main/docs/QUICKSTART.md"
Repository = "https://github.com/bruadam/hvx"
"Bug Tracker" = "https://github.com/bruadam/hvx/issues"

[project.scripts]
hvx = "src.cli.main:cli"

[tool.setuptools]
packages = ["src", "src.cli", "src.core", "src.models", "src.graphs", "src.services", "src.utils", "src.reporting"]
include-package-data = true

[tool.setuptools.package-data]
src = ["graphs/*.yaml", "graphs/fixtures/*.json", "reporting/templates/*.yaml"]

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
